# MoeCompiler

./: .gitignore  CMakeLists.txt  README.md
backup/: Opnd.hpp  RegisterAllocator.cpp  RegisterAssign.cpp  RegisterAssign.hpp  backendPass.cpp  backendPass.hpp
moe/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README  README.md  compiler  main.cpp  test.sysy  test.tokens  testFileTable.txt
moe/clib/: lexer.cpp  lexer.hpp  lexer.hpp.bk
moe/frontend/: ASTVisitor.cpp  ASTVisitor.hpp  HIRList.cpp  HIRList.hpp  IRAddr.cpp  IRAddr.hpp  IRInstr.cpp  IRInstr.hpp  frontend.cpp  frontend.hpp  frontendHeader.cpp  frontendHeader.hpp
moe/frontend/SysAntlr/: SysY.interp  SysY.tokens  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.h
moe/mlib/: 2  common.cpp  common.hpp  mdb.hpp  moeconcept.cpp  moeconcept.hpp  mtype.cpp  mtype.hpp  stlextension.hpp  sysy.cpp  sysy.cpp.bk  sysy.hpp  unittest.cpp  unittest.hpp
moe/pyScript/: MoePyEnvConfig.yml  README.md  __bcolor.py  listall.py  pytest.py  testParser.py
moe/scripts/configs/: settings.json
moe/scripts/pyScript/: MoePyEnvConfig.yml  README.md  case_and_case_set.py  color.py  command_line_tool.py  init.sh  settings.py  test_py.py  tester.py
moe/scripts/shScripts/: compileSy.sh  grun.sh
moe/src/: main.cpp
moe/src/Tests/: retularTest.cpp  testExample.cpp  testRegSwitch.cpp  testStaticValue.cpp
moe/src/Tests/BasicTests/: testAutoRestore.cpp  testDynamicCastUPtr.cpp  testExample.cpp  testRegSwitch.cpp  testUnaryVariant.cpp
moe/src/Tests/FrontendTests/: testStaticValue.cpp
moe/src/frontend/: 2  ASTVisitor.cpp  ASTVisitor.hpp  IRAddr.cpp  IRAddr.hpp  IRInstr.cpp  IRInstr.hpp  StaticValue.cpp  StaticValue.hpp  TypeInfo.cpp  TypeInfo.hpp  frontend.cpp  frontend.hpp  frontendHeader.cpp  frontendHeader.hpp
moe/src/frontend/SysAntlr/: CommonLex.g4  SysY.interp  SysYLexer.cpp  SysYParser.cpp
moe/src/mlib/: SysY.cpp  SysY.hpp  common.cpp  common.hpp  cprt.cpp  cprt.hpp  mdb.cpp  mdb.hpp  moeconcept.cpp  moeconcept.hpp  mtype.cpp  mtype.hpp  stlextension.cpp  stlextension.hpp  submain.cpp  submain.hpp
moe/testcases/: .gitignore
moe/testcases/BasicTestCase/: constDecl.sy
moe/testcases/BasicTestCase/constGlobalDecl/: constArrDecl.ms  constArrDecl.sy  constVarDecl.ms  constVarDeclWithLiteralAndOp.ms
moe/testcases/BasicTestCase/globalDecl/: globalVar.ms  globalVar.sy
notebooks/: ;  (+5 more)
(+279 files in other folders)
